--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@adeira/murmur-hash": "^2.0.1",
     "@types/adeira__murmur-hash": "^0.2.1",
     "leaflet": "^1.9.4",
+    "leaflet-providers": "^2.0.0",
     "murmur-32": "^1.0.0"
   }
 }
